# precommit-ad-blocker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
src/precommit_ad_blocker/: __init__.py  ad_blocker.py  test_wrapper.py
src/precommit_adblock/: __init__.py
tests/: conftest.py  test_ad_blocker.py  test_hook.py
