[project]
name = "precommit-adblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tamir Bahar", email = "tamir.bahar@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
precommit-adblock = "precommit_adblock:main"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
