[project]
name = "precommit-adblock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tamir Bahar", email = "tamir.bahar@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["more-itertools>=10.8.0", "typer>=0.24.1"]

[project.scripts]
precommit-adblock = "precommit_adblock:app"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
