[project]
name = "precommit-ad-blocker"
version = "0.1.0"
description = "Pre-commit ad-blocker hook"
readme = "README.md"
authors = [{ name = "Tamir Bahar" }]
requires-python = ">=3.12"
dependencies = ["more-itertools>=10.8.0", "typer>=0.24.1"]

[project.scripts]
precommit-ad-blocker = "precommit_ad_blocker:app"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"
